force-app/main/default/objects/Apex_Aura_Action__c/Apex_Aura_Action__c.object-meta.xml
<CustomObject>
    <label>Apex/Aura Action</label>
    <nameField>
        <label>Apex/Aura Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Aura Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>