force-app/main/default/objects/Apex_Aura_Action__c/fields/Argument_List__c.field-meta.xml
<CustomField>
    <fullName>Argument_List__c</fullName>
    <label>Argument List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>