force-app/main/default/objects/Apex_Aura_Action__c/fields/Aura_LWC_Cmp_Name__c.field-meta.xml
<CustomField>
    <fullName>Aura_LWC_Cmp_Name__c</fullName>
    <label>Aura/LWC Cmp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>