force-app/main/default/objects/Apex_Aura_Action__c/fields/Object_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Object_Related_To__c</fullName>
    <label>Object Related To</label>
    <length>120</length>
    <type>Text</type>
</CustomField>