force-app/main/default/objects/Apex_Aura_Action__c/recordTypes/Apex_Action.recordType-meta.xml
<RecordType>
    <fullName>Apex_Action</fullName>
    <active>true</active>
    <label>Apex Action</label>
</RecordType>