force-app/main/default/objects/Apex_Aura_Action__c/recordTypes/Aura_Action.recordType-meta.xml
<RecordType>
    <fullName>Aura_Action</fullName>
    <active>true</active>
    <label>Aura Action</label>
</RecordType>